chore: Improve code quality and remove deprecated code
Signed-off-by: Javier Roman <javier.rmgz@gmail.com>